# wopping

./: README.md
graph/: package-lock.json  package.json
graph/src/: App.tsx
meilisearch/: .gitignore  README.md  pyproject.toml
meilisearch-go/: go.mod  go.sum  main.go
meilisearch-ruby/: Gemfile  main.rb
meilisearch/src/: main.py
meilisearch/src/meilisearch/: __init__.py
opendata/api/: .gitignore  README.md  main.py  score.py
opendata/data/: main.json  sample.json  t000002d0000000030-88c26d73c154f9d05f542234c287ff63-0.json  t000002d1700000002-637fe427cc3abb53e8c117c5d5dc2331-0.json  t000002d1800000012-4a11783ece21a84caad7f0f6e4ea11cc-0.json  t000003d0000000032-0b1c0ec7bfb488a91faa85f4bb018d66-0.json  t000003d0000000032-879c29ddee20c440ee9d69285852dd32-0.json  t000003d0000000036-3158c1ce37a1e3ce38b648e1166ef92d-0.json  t000003d0000000036-ac9879b79e8858d92b62a4a3e792049a-0.json  t000003d0000000036-bdf04f836cfe9bc04eaf15613179ee24-0.json  t000003d0000000036-d4c9d06489b3b0e60cad84b476f55043-0.json  t000003d0000000059-390d3fe0c2b723bef9e87201c98242d2-0.json  t000003d0000000092-7b6022268378a49c94856f643df99903-0.json  t000003d0000000092-80836912645f916f47c15167a8644917-0.json  t000003d0000000092-ec56279e25bed3fcd8c04f9939f5e071-0.json  t000003d0000000627-33d6f80efb2449cdb92d7d2e9d7de869-0.json  t000003d0000000627-4881893ec86e47b21dc01e721ad993ad-0.json  t000003d0000000627-67b7d82b9f018667d80881cc5db5e047-0.json  t000003d0000000627-b5e563eb823cb46336a086f8f557d1a3-0.json  t000003d1900000001-0fd75121a68253d30173e02abccd39b0-0.json  (+277 more)
opendata/python/: main.py
(+5 files in other folders)
